[package]
name = "UIS-Engine"
version = "0.1.0"
edition = "2021"

[dependencies]
indexmap = "2.2"
itoa = "1.0"

[profile.release]
lto = "thin"  # or "fat" for more aggressive optimization (otherwise "thin")
debug = false
codegen-units = 1 # Increases optimization potential across unitscargo build --release
